fixed overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 
 body {
   line-height: 1.3;
-  margin: 0;
+  margin: 0px;
   padding: 0;
   background-color: #555;
 }
@@ -54,16 +54,18 @@ p {
   padding: 1rem;
 }
 
+/* Work section styling */
 section {
   display: flex;
   justify-content: space-between;
+
 }
 
 section h2 {
   background-color: #fe5d26;
   text-align: center;
   font-size: 3rem;
-  flex: 0 0 20%;
+  flex: 0 0 25%;
 }
 
 section div {
@@ -72,6 +74,9 @@ section div {
 
 .description {
   display: flex;
+}
+.description p{
+  background-color: #fe5d26;
 }
 
 .description img {
@@ -82,7 +87,6 @@ section div {
   margin: auto;
 }
 
-/* Work section styling */
 
 .projects {
   display: flex;
@@ -98,11 +102,12 @@ section div {
   margin: 3px;
   display: flex;
   flex-direction: column;
+  max-height: 60%;
 }
 .project p {
-  font-size: 15px;
+  font-size: 20px;
   padding: 8px;
-  background-color: aquamarine;
+  background-color: #fe5d26;
 }
 
 .prework {
@@ -114,6 +119,7 @@ section div {
 }
 .projects section a img {
   width: 100%;
+  object-fit: cover
 }
 
 /* end work section styling */
